# vertexlauncher

./: .gitignore  Cargo.toml  LICENSE.md  README.md  org.sturdyfool10.VertexLauncher.yml  patch.py
crates/auth/: Cargo.toml
crates/auth/src/: cache.rs  constants.rs  device_code.rs  error.rs  lib.rs  minecraft.rs  oauth.rs  runtime.rs  secret_store.rs  types.rs  util.rs
crates/auth/src/types/: cached_account.rs  cached_account_renewal_event.rs  cached_accounts_state.rs  device_code_login_flow.rs  device_code_prompt.rs  login_event.rs  minecraft_cape_state.rs  minecraft_login_flow.rs  minecraft_profile_state.rs  minecraft_skin_state.rs  minecraft_skin_variant.rs  refresh_token_state.rs
crates/content_resolver/: Cargo.toml
crates/content_resolver/src/: installed_content_hash_cache.rs  installed_content_resolver.rs  lib.rs
crates/egui_cosmic_glue/: Cargo.toml
crates/egui_cosmic_glue/src/: atlas.rs  draw.rs  lib.rs
crates/installation/: Cargo.toml
crates/installation/src/: fs_support.rs  installation_core.rs  launch_engine.rs  launch_engine_downloads.rs  launch_engine_modloaders.rs  launch_engine_modloaders_tests.rs  lib.rs  process_control.rs
crates/launcher_ui/: Cargo.toml  build.rs
crates/launcher_ui/src/: console.rs  desktop.rs  install_activity.rs  lib.rs  notification.rs  privacy.rs  window_effects.rs
crates/launcher_ui/src/assets/: mod.rs
crates/launcher_ui/src/screens/: console.rs  content_browser.rs  content_browser_install.rs  content_browser_state.rs  content_browser_ui.rs  content_browser_workers.rs  discover.rs  discover_detail.rs  home.rs  home_nbt.rs  home_screenshots.rs  home_server_ping.rs  home_support.rs  home_thumbnails.rs  instance.rs  instance_exports.rs  instance_logs.rs  instance_move_modal.rs  instance_screenshots.rs  instance_settings_modal.rs  legal.rs  library.rs  library_runtime.rs  mod.rs  platform.rs  settings.rs  skins.rs  skins_cape_grid.rs  skins_expressions.rs  skins_preview.rs  skins_preview_expressions.rs  skins_preview_gpu.rs  skins_preview_gpu_effects.rs  skins_preview_gpu_geometry.rs  skins_preview_gpu_post_process.rs  skins_preview_scene.rs  skins_state.rs
crates/launcher_ui/src/ui/: context_menu.rs  instance_context_menu.rs  mod.rs  modal.rs  style.rs  svg_aa.rs  text_input_theme.rs  theme.rs  top_bar.rs
crates/mclauncher/: Cargo.toml
crates/mclauncher/src/: main.rs  window_effects.rs
crates/mclauncher/src/app/: config_format_modal.rs  create_instance_modal.rs  mod.rs
crates/mclauncher/src/assets/: mod.rs
crates/mclauncher/src/screens/: instance.rs  legal.rs  library.rs  mod.rs  settings.rs  skins.rs
crates/mclauncher/src/ui/: mod.rs  theme.rs  top_bar.rs
crates/textui/: Cargo.toml
crates/textui/src/: advanced_text.rs  async_raster.rs  atlas.rs  clipboard.rs  code_block_options.rs  conversions.rs  cursor_layout.rs  editor.rs  font_features.rs  geometry.rs  gpu.rs  input_options.rs  label_options.rs  lib.rs  markdown_parser.rs  path_layout.rs  prepared_layout.rs  text_helpers.rs  text_ui.rs  text_ui_async_raster.rs  text_ui_input_runtime.rs  text_ui_input_widget.rs  text_ui_label_scene.rs  text_ui_path_text.rs  text_ui_scene_builder.rs
crates/textui/src/advanced_text/: rich_text_span.rs  rich_text_style.rs  text_atlas_page_data.rs  text_atlas_page_snapshot.rs  text_atlas_quad.rs  text_atlas_sampling.rs  text_color.rs  text_feature_setting.rs  text_frame_info.rs  text_frame_output.rs  text_fundamentals.rs  text_glyph_raster_mode.rs  text_gpu_power_preference.rs  text_gpu_quad.rs  text_gpu_scene.rs  text_gpu_scene_draw_options.rs  text_gpu_scene_page_batch.rs  text_graphics_api.rs  text_graphics_config.rs  text_hinting_mode.rs  text_input_event.rs  text_kerning.rs  text_key.rs  text_label_options.rs  text_markdown_block.rs  text_markdown_heading_level.rs  text_modifiers.rs  text_optical_sizing_mode.rs  text_path.rs  text_path_error.rs  text_path_glyph.rs  text_path_layout.rs  text_path_options.rs  text_point.rs  text_pointer_button.rs  text_rasterization_config.rs  text_rect.rs  text_render_scene.rs  text_renderer_backend.rs  text_rendering_policy.rs  (+6 more)
crates/textui/src/atlas/: dirty_atlas_rect.rs  field_line_segment.rs  flattened_outline.rs  glyph_atlas_texture.rs  glyph_atlas_worker_message.rs  glyph_error_score.rs  native_glyph_atlas_texture.rs
crates/textui/src/gpu/: cpu_scene_atlas_page.rs  resolved_text_graphics_config.rs  resolved_text_renderer_backend.rs  text_wgpu_instance.rs  text_wgpu_pipeline_resources.rs  text_wgpu_prepared_batch.rs  text_wgpu_prepared_scene.rs  text_wgpu_scene_batch_source.rs  text_wgpu_scene_callback.rs  text_wgpu_screen_uniform.rs
crates/textui/src/path_layout/: text_path_sample.rs
crates/textui/src/prepared_layout/: prepared_glyph.rs  prepared_text_cache_entry.rs  prepared_text_layout.rs
crates/textui/src/shaders/: text_instanced.wgsl
crates/textui/src/text_helpers/: truncated_text.rs
crates/textui/src/text_ui_async_raster/: async_raster_cache_entry.rs  async_raster_kind.rs  async_raster_request.rs  async_raster_response.rs  async_raster_state.rs  async_raster_worker_message.rs  typography_snapshot.rs
crates/vertex_3d/: Cargo.toml
crates/vertex_3d/shaders/: vertex3d_globals.slang  vertex3d_material.slang  vertex3d_scene.slang
crates/vertex_3d/src/: asset.rs  camera.rs  command.rs  image.rs  lib.rs  material.rs  math.rs  mesh.rs  scene.rs
crates/vertex_3d/src/math/: mat4.rs
crates/vertex_3d/src/renderer/: adapter_selection.rs  config.rs  deferred.rs  frame_graph.rs  mod.rs  msaa_resolve.rs  resources.rs  scene_renderer.rs  submission.rs
crates/vertex_3d/src/shader/: compiler.rs  config.rs  gbuffer.rs  hdr.rs  kind.rs  mod.rs  pipeline.rs  program.rs  reflection.rs  stage.rs  standard_library.rs
crates/vertexlauncher/: Cargo.toml  build.rs
crates/vertexlauncher/src/: main.rs
crates/vertexlauncher/src/app/: app_core.rs  app_icon.rs  app_metadata.rs  (+20 more)
crates/vtmpack/: Cargo.toml
crates/vtmpack/src/: constants.rs  export.rs  lib.rs  read_manifest.rs  vtmpack_compression_mode.rs  vtmpack_export_options.rs  vtmpack_export_stats.rs  vtmpatch.rs
(+397 files in other folders)
