[workspace]
resolver = "3"
members = [
    "crates/auth",
    "crates/config",
    "crates/curseforge",
    "crates/fontloader",
    "crates/installation",
    "crates/instances",
    "crates/launcher_runtime",
    "crates/launcher_ui",
    "crates/vertexlauncher",
    "crates/modprovider",
    "crates/modrinth",
    "crates/runtime_bootstrap",
    "crates/textui",
]
default-members = [
    "crates/vertexlauncher",
]

[workspace.dependencies]
eframe = { version = "*", features = ["wgpu", "serde"] }
egui = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive", "serde_derive"] }
wgpu = "*"
fontdb = "*"
thiserror = "*"
toml = "*"
serde_json = "*"
humantime = "*"
humantime-serde = "*"
egui_extras = { version = "*", features = ["http", "image", "gif", "svg", "chrono", "datepicker", "syntect", "serde"] }
image = "*"
cosmic-text = "*"
glyphon = "*"
pulldown-cmark = "*"
syntect = "*"
tokio = { version = "*", features = ["rt-multi-thread", "sync", "time"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["fmt", "env-filter"] }
url = "*"

# internal crates
auth = { path = "crates/auth" }
config = { path = "crates/config" }
curseforge = { path = "crates/curseforge" }
installation = { path = "crates/installation" }
instances = { path = "crates/instances" }
launcher_runtime = { path = "crates/launcher_runtime" }
launcher_ui = { path = "crates/launcher_ui" }
modrinth = { path = "crates/modrinth" }
modprovider = { path = "crates/modprovider" }
fontloader = { path = "crates/fontloader" }
runtime_bootstrap = { path = "crates/runtime_bootstrap" }
textui = { path = "crates/textui" }

[profile.dev]
# Your crates (workspace members): keep normal dev behavior
opt-level = 0
debug = 2
incremental = true
codegen-units = 256

[profile.dev.package."*"]
# All dependencies (everything not in your workspace): optimize hard
opt-level = 3
debug = 1
incremental = true
codegen-units = 16
