[workspace]
resolver = "3"
members = [
    "crates/app_paths",
    "crates/auth",
    "crates/config",
    "crates/content_resolver",
    "crates/curseforge",
    "crates/fontloader",
    "crates/installation",
    "crates/managed_content",
    "crates/modal_host",
    "crates/ui_foundation",
    "crates/instances",
    "crates/launcher_runtime",
    "crates/launcher_ui",
    "crates/vertexlauncher",
    "crates/modprovider",
    "crates/modrinth",
    "crates/runtime_bootstrap",
    "crates/shared_lru",
    "crates/skin_preview",
    "crates/textui",
    "crates/textui_egui",
    "crates/vertex_3d",
    "crates/vertex_3d_build",
    "crates/vertex_constants",
    "crates/vtmpack",
]
default-members = [
    "crates/vertexlauncher",
]

[workspace.dependencies]
eframe = { version = "0.34.1", features = ["wgpu", "serde"] }
egui = { version = "0.34.1", features = ["serde"] }
egui-wgpu = "0.34.1"
egui_extras = { version = "0.34.1", features = ["http", "image", "gif", "svg", "datepicker", "syntect", "serde"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
wgpu = "29.0.0"
fontdb = "0.23.0"
thiserror = "1.0.69"
toml = "0.8.23"
serde_json = "1.0.149"
humantime = "2.3.0"
directories = "6.0.0"
image = "0.24.9"
cosmic-text = "0.18"
swash = "0.2.6"
glyphon = "0.10.0"
etagere = "0.2.15"
pulldown-cmark = "0.13.3"
syntect = "5.3.0"
base64 = "0.22.1"
raw-window-handle = "0.6.2"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
url = "2.5.8"
ureq = { version = "3.3.0", features = ["json"] }
qrcode = "0.14"
gilrs = "0.11"
rustc-hash = "2.1.1"

# internal crates
app_paths = { path = "crates/app_paths" }
auth = { path = "crates/auth" }
config = { path = "crates/config" }
content_resolver = { path = "crates/content_resolver" }
curseforge = { path = "crates/curseforge" }
installation = { path = "crates/installation" }
instances = { path = "crates/instances" }
launcher_runtime = { path = "crates/launcher_runtime" }
launcher_ui = { path = "crates/launcher_ui" }
managed_content = { path = "crates/managed_content" }
modal_host = { path = "crates/modal_host" }
ui_foundation = { path = "crates/ui_foundation" }
modrinth = { path = "crates/modrinth" }
modprovider = { path = "crates/modprovider" }
fontloader = { path = "crates/fontloader" }
runtime_bootstrap = { path = "crates/runtime_bootstrap" }
shared_lru = { path = "crates/shared_lru" }
skin_preview = { path = "crates/skin_preview" }
textui = { path = "crates/textui" }
textui_egui = { path = "crates/textui_egui" }
vtmpack = { path = "crates/vtmpack" }
vertex_constants = { path = "crates/vertex_constants" }
vertex_3d_build = { path = "crates/vertex_3d_build" }

[profile.dev]
# Your crates (workspace members): keep normal dev behavior
opt-level = 0
debug = 2
incremental = true
codegen-units = 256

[profile.dev.package."*"]
# All dependencies (everything not in your workspace): optimize hard
opt-level = 3
debug = 1
incremental = true
codegen-units = 16
