[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
image.workspace = true
base64 = "0.22.1"
ureq = { version = "2.12.1", features = ["json"] }
tokio.workspace = true
tracing.workspace = true
runtime_bootstrap.workspace = true
zeroize = "1.8.2"
rand = "0.9.2"
sha2 = "0.10.9"
url.workspace = true
keyring = "3.6.3"
