[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
image.workspace = true
base64 = "*"
ureq = { version = "*", features = ["json"] }
tokio.workspace = true
tracing.workspace = true
runtime_bootstrap.workspace = true
zeroize = "*"
rand = "*"
sha2 = "*"
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "*", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "*", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "*", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }
