[package]
name = "content_resolver"
version = "0.1.16-Alpha"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
managed_content.workspace = true
modprovider.workspace = true
modrinth.workspace = true
curseforge.workspace = true
tracing.workspace = true
vertex_constants.workspace = true
zip = { version = "*", default-features = false, features = ["deflate"] }
