[package]
name = "installation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq = { version = "2.12.1", features = ["json"] }
flate2 = "1.1.5"
tar = "0.4.44"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
