[package]
name = "installation"
version = "0.1.10-Alpha"
edition = "2024"

[dependencies]
app_paths.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
flate2 = "*"
tar = "*"
zip = { version = "*", default-features = false, features = ["deflate"] }
