[package]
name = "installation"
version = "0.1.16-Alpha"
edition = "2024"

[dependencies]
app_paths.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
vertex_constants.workspace = true
flate2 = "*"
tar = "*"
zip = { version = "*", default-features = false, features = ["deflate"] }
