[package]
name = "launcher_ui"
version = "0.1.15-Alpha"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
app_paths.workspace = true
eframe.workspace = true
egui.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
content_resolver.workspace = true
config.workspace = true
instances.workspace = true
installation.workspace = true
managed_content.workspace = true
modprovider.workspace = true
modrinth.workspace = true
curseforge.workspace = true
textui.workspace = true
launcher_runtime.workspace = true
toml.workspace = true
raw-window-handle.workspace = true
tracing.workspace = true
auth.workspace = true
image.workspace = true
resvg = "*"
bytemuck = { version = "*", features = ["derive"] }
ureq.workspace = true
flate2 = "*"
base64.workspace = true
qrcode.workspace = true
tar = "*"
xz2 = "*"
vtmpack.workspace = true
zip = { version = "*", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "*"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "*", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "*", default-features = false, features = ["gtk3"] }
x11-dl = "*"
wayland-backend = { version = "*", features = ["client_system"] }
wayland-client = "*"
wayland-protocols-plasma = { version = "*", default-features = false, features = ["client"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"

