[package]
name = "vertexlauncher"
version = "0.1.10-Alpha"
edition = "2024"
build = "build.rs"

[dependencies]
app_paths.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
fontloader.workspace = true
config.workspace = true
textui.workspace = true
auth.workspace = true
instances.workspace = true
installation.workspace = true
launcher_runtime.workspace = true
launcher_ui.workspace = true
managed_content.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
humantime.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
modrinth.workspace = true
curseforge.workspace = true
image.workspace = true
flate2 = "*"
ureq.workspace = true
tar = "*"
xz2 = "*"
vtmpack.workspace = true
zip = { version = "*", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "*"

[target.'cfg(target_os = "windows")'.dependencies]
wry = "=0.24.11"
tao = "=0.16.10"
raw-window-handle = "0.6.2"
windows = { version = "=0.37.0", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_SystemInformation", "Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "*", default-features = false, features = ["gtk3"] }
wry = "=0.24.11"
tao = "=0.16.10"

[target.'cfg(target_os = "macos")'.dependencies]
wry = "=0.24.11"
tao = "=0.16.10"
objc = "*"

[build-dependencies]
image.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "*"
