[package]
name = "vertexlauncher"
version = "0.1.15-Alpha"
edition = "2024"
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
app_paths.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
fontloader.workspace = true
config.workspace = true
textui.workspace = true
auth.workspace = true
instances.workspace = true
installation.workspace = true
launcher_runtime.workspace = true
launcher_ui.workspace = true
managed_content.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
humantime.workspace = true
tokio.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
modrinth.workspace = true
curseforge.workspace = true
image.workspace = true
flate2 = "*"
ureq.workspace = true
tar = "*"
xz2 = "*"
vtmpack.workspace = true
zip = { version = "*", default-features = false, features = ["deflate"] }
discord-rich-presence = "1.1.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "*"

[target.'cfg(target_os = "windows")'.dependencies]
wry = "=0.31.1"
tao = "=0.22.0"
raw-window-handle = "0.6.2"
windows = { version = "=0.37.0", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_SystemInformation", "Win32_UI_Shell"] }


[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "*", default-features = false, features = ["gtk3"] }
wry = "=0.31.1"
tao = "=0.22.0"


[target.'cfg(target_os = "macos")'.dependencies]
wry = "=0.31.1"
tao = "=0.22.0"
objc = "*"


[build-dependencies]
image.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "*"
